--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 SENDGRID_API_KEY=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
+SECRET_KEY=ai0g^ot$m1d_leodg0_v%fescpt(a4+-fficz=p7&ky5&#@5e$
