--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-SENDGRID_API_KEY=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
 SECRET_KEY=ai0g^ot$m1d_leodg0_v%fescpt(a4+-fficz=p7&ky5&#@5e$
+SENDGRID_API_KEY=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
+AWS_ACCESS_KEY_ID=AKIA3P7JVJJBE6BUB6MQ
+AWS_SECRET_ACCESS_KEY=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
+AWS_STORAGE_BUCKET_NAME=thingboard-bucket
+DEFAULT_FILE_STORAGE=storages.backends.s3boto3.S3Boto3Storage
