--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ db.sqlite3
 db.sqlite3-journal
 ~$Tracker.xlsx
 *.env
+*.exe
 media
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
